--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 10px;
   padding: 0;
@@ -13,26 +12,24 @@ h3 {
 }
 
 canvas {
-  display: block;
+  display: flex;
   margin: auto;
   margin-top: 20px;
   margin-bottom: 20px;
   border-style: solid;
-  border-radius: 10px;
   border-width: 5px;
   border-color: black;
 }
 
 button {
-  display: block;
+  display: flex;
   margin: auto;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 20px;s
 }
 
-slider {
+/* label, input {
   display: block;
-  margin: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
+  width: 400px;
+  color: #FF0;
+} */
