--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@ h3 {
 }
 
 p {
+  display: flex;
+  margin: 20px;
+  padding-top: 14px;
   text-align: left;
 }
 
@@ -43,6 +46,14 @@ canvas {
   border-left-style: solid;
   border-top-style: solid;
   box-shadow: 0 6px 20px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  /* 3.9 for making the canvas fu11screen */
+  /* width: 100%;
+  height: 100%;
+  margin: auto;
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: -1; */
 }
 
 #color-block-background {
@@ -149,11 +160,13 @@ input:hover {
 
 #reset-button {
   margin: 20px;
+  padding-top: 10px;
   float: left;
 }
 
 #save-button {
   margin: 20px;
+  padding-top: 10px;
   float: left;
 }
 
