--- a/style.css
+++ b/style.css
@@ -30,9 +30,18 @@ h3 {
 
 p {
   display: flex;
-  margin: 20px;
-  padding-top: 14px;
+  font-size: 15px;
+  margin-top: 30px;
+  padding: 5px;
   text-align: left;
+  border-style: none;
+  border-radius: 5px;
+
+  transition-duration: 0.4s;transition-duration: 0.4s;
+}
+
+p:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 #drawing-space {
@@ -172,10 +181,6 @@ input:hover {
   height: 80px; */
 }
 
-pre {
-
-}
-
 #reset-button {
   margin: 20px;
   padding-top: 10px;
@@ -191,6 +196,7 @@ pre {
 button {
   font-family: 'Courier New', monospace;
   padding: 5px;
+  font-size: 14px;
   border-style: none;
   border-radius: 5px;
   background-color: white;
